fixed shifting-images-on-image-tab issue in firefox
git-svn-id: http://svn.code.sf.net/p/specify/code/trunk/SpecifyEnterprise/SpecifyWeb/PortalApp@10702 ce9bf4bf-376f-1848-a496-a1c9fe3b1a39

--- a/resources/css/thumb-view.css
+++ b/resources/css/thumb-view.css
@@ -7,6 +7,8 @@
     padding: 0;
     height: 207px;
     width: 207px;
+    /*height: 127px;
+    width: 127px;*/
     line-height: 1px;
     text-align: center;
     vertical-align: middle;
@@ -24,10 +26,10 @@
 }
 
 *.tv-thumb td{
-    /*max-height: 100%;
-    max-width: 100%;
+    /*max-height: 200px;
+    max-width: 200px;*/
 
-    display: block;
+    /*display: block;
     margin: auto;*/
 
     vertical-align: middle;
@@ -38,7 +40,7 @@
     float: left;
     /*margin: 4px;*/
     margin-right: 0;
-    padding: 2px;
+    //padding: 1px;
 }
 *.tv-thumb-wrap span {
     
@@ -49,9 +51,9 @@
 }
 
 *.tv-x-item-over{
-    border:1px solid #dddddd;
+    /*border:1px solid #dddddd;*/
     background: #efefef url(over.gif) repeat-x left top;
-    padding: 1px;
+    /*padding: 1px;*/
 }
 
 *.tv-x-item-selected{
